--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 
-#spring.datasource.url=jdbc:h2:~/taskProject2
-spring.datasource.url=jdbc:h2:mem:taskProject2
+#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
